# perfsmith

./: .dockerignore  .gitignore  LICENSE  README.md  index.html  pyproject.toml
day_0/: Dockerfile  README.md  bench_params.json  run_day0.sh  serve_params.json  sla_params.json
fixtures/: expected_report.md  expected_report_fixed.md  expected_summary.csv
fixtures/atlas/: optimizer_tiered.csv  qwen3_4b_5090_short_smoke.summary.csv
fixtures/grids/: short_v0.json
fixtures/reports/: optimizer_tiered.balanced.md
fixtures/trace/: agent_trace.json  tool_stub.json
fixtures/workloads/: short_balanced.json  short_guardrail_fail.json  short_verify_fail.json
perfsmith/: __init__.py  cli.py  constants.py  optimize.py  replay_trace.py  report.py  run.py  summarize.py  surrogate.py  types.py  utils.py
recipes/vllm/: Dockerfile  README.md  run_matrix.sh  workload.short.json
recipes/vllm/qwen-3-5-4b-text-only/: README.md  grid.long_prefill.search.v1.json  grid.short.search.v1.json  run_long_prefill_search.sh  run_short_search.sh  workload.long_prefill.search.v1.json  workload.short.search.v1.json
reports/: README.md
tests/: test_optimize.py  test_report.py  test_run.py  test_summarize.py  test_surrogate.py  test_trace.py
