[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfsmith"
version = "0.1.0"
description = "Dataset-first SLA optimizer for LLM/agent workloads"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
perfsmith = "perfsmith.cli:main"

[tool.setuptools]
packages = ["perfsmith"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
