[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perfsmith"
version = "0.1.0"
description = "Workload-driven InferenceOps toolkit for reproducible vLLM benchmarking and SLO tuning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.14"
dependencies = [
  "vllm==0.17.1",
  "transformers==4.57.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
perfsmith = "perfsmith.cli:main"

[tool.setuptools]
packages = ["perfsmith"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
